# UFMGolf

./: .gitignore  Background.cpp  Ball.cpp  Ball.h  CMakeLists.txt  Hole.cpp  Launcher.cpp  Level.cpp  Level.h  Obstacle.cpp  Origem.cpp  README.md  Timer.cpp  Timer.h  refman.rtf
menu/: CMakeLists.txt  main.cpp  makefile
util/: Consts.hpp  Util.cpp  Util.hpp
